--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zalo-fe",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://quynhchu1401-dev.github.io/ZaloOA/",
+  "homepage": "https://namquan79.github.io/zalo-fe/",
   "scripts": {
     "serve": "vue-cli-service serve",
     "dev:server": "nodemon server/index.js",
